# RabbitMQ-test-app

./: CMakeLists.txt  README.md  amqpcpp.cmake  close_connection  loop.py  test_app.cpp
stack_traces/: transmitter_thread2_stackTrace.txt  transmitter_thread_stackTrace.txt
